--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
   	<p><b>Mail Address</b>: 3850 Coleman Rd, Apt. 231A, East Lansing, MI 48823</p>
 	<p><b>Email</b>: groszste@msu.edu</p>
 	<p><b>Phone:</b> (248)-504-9207</p>
-	<a href="https://www.linkedin.com/in/steven-grosz-317076107/">LinkedIn</a>
+	<a href="https://www.linkedin.com/in/steven-grosz-317076107/" target="_blank">LinkedIn</a>
 	</div>
     
   </body>
