--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   	<center><h1>Steven Grosz's Website</h1></center>
   	
   	<center>
-  	<b>Home</b> | <a href="about.html">About</a> | <a href="interest.html">Interests</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
+  	<b>Home</b> | <a href="about.html">About</a> | <a href="interests.html">Interests</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
   	</center>
   	
 	<div id="body">
