--- a/interests.html
+++ b/interests.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-  
+
     <title>Steven Grosz's Website - Home</title>
-    
+
 	<style type="text/css">
     #interests{
     width: 700px;
@@ -14,27 +14,27 @@
     text-align: left;
     }
     </style>
-    
+
   </head>
-  
+
   <body a link="black" vlink="black">
-  
+
   	<center><h1>Steven Grosz's Website</h1></center>
-  	
+
   	<center>
   	<a href="index.html">Home</a> | <a href="about.html">About</a> | <b>Interests</b> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
   	</center>
-  	
+
   	<div id=interests>
   	<h3>Career Interests</h3>
-	<p>The following is a list of my current fields of interests in which I am actively seeking employment in:</p>
+	<p>The following is a list of my current fields of interests in which I am interested in pursuing graduate studies in:</p>
 	<ul>
-   		<li>Embedded Systems</li>
-   		<li>Circuit Design</li>
-   		<li>Biomedical Engineering</li>
-   		<li>Computer Programming</li>
-   		<li>Software Engineering</li>
+   		<li>Artificial Intelligence</li>
+   		<li>Robotics</li>
+   		<li>Machine Learning</li>
+   		<li>Neuroscience</li>
+   		<li>Brain Machine Interfaces (BMI)</li>
   	</div>
-  	
+
   </body>
 </html>
