Updated to reflect current interests

--- a/interests.html
+++ b/interests.html
@@ -27,13 +27,14 @@
 
   	<div id=interests>
   	<h3>Career Interests</h3>
-	<p>The following is a list of my current fields of interests in which I am interested in pursuing graduate studies in:</p>
+	<p>The following is a list of my current fields of interests:</p>
 	<ul>
    		<li>Artificial Intelligence</li>
-   		<li>Robotics</li>
    		<li>Machine Learning</li>
-   		<li>Neuroscience</li>
-   		<li>Brain Machine Interfaces (BMI)</li>
+      <li>Robotics</li>
+      <li>Embedded Systems</li>
+   		<li>Software Engineering</li>
+   		<li>Biomedical Engineering</li>
   	</div>
 
   </body>
