--- a/projects.html
+++ b/projects.html
@@ -30,13 +30,17 @@
     <p>These are challenging projects outside of the course curriculum that helped to expand my knowledge in the related subject matter.</p>
     <ul>
    		<li>Landline Phone Use Indicator - knowledge area: Electronic Circuits</li>
-   		<li>Image Processing - knowledge area: Digital Signal Processing</li>
+   		<li>Image Processing - knowledge area: Digital Signal Processing (DSP)</li>
    		<li>Telephone Dialing Signal Processing - knowledge area: Signal Processing</li>
    		<li>Matching Game - knowledge area: C</li>
    	</ul>
    	<h3>Personal Projects</h3>
    	<p>The following are some of the personal projects that I have created in my free time as a way to build new skills and demonstrate my knowledge and ability to learn.</p>
    	<ul>
+      <li>Speech Processing - knowledge area: DSP, Natural Language Processing</li>
+        &emsp;Link to github repository <a href="https://github.com/groszste/speech_processing">here</a>
+      <li>Personal Website - knowledge area: HTML, CSS</li>
+        &emsp;Link to github repository <a href="https://github.com/groszste/groszste.github.io">here</a>
    		<li>Battleship - knowledge area: Python</li>
         &emsp;Link to github repository <a href="https://github.com/groszste/battleShip">here</a>
       <li>Battleship2 - knowledge area: Python</li>
@@ -45,8 +49,6 @@
         &emsp;Link to github repository <a href="https://github.com/groszste/hangman">here</a>
    		<li>Text Based Adventure Game - knowledge area: Python</li>
         &emsp;Link to github repository <a href="https://github.com/groszste/AdventureRPG">here</a>
-   		<li>Personal Website - knowledge area: HTML, CSS</li>
-        &emsp;Link to github repository <a href="https://github.com/groszste/groszste.github.io">here</a>
    	</ul>
     </div>
 
