updated interests and bio

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
     <div id="summary">
     <h3>Steven Grosz's Bio</h3>
-    <p>As a hardworking student in the honors college at Michigan State University, my goals are to maintain a 4.0 GPA and to continue to develop professionally through work and university related experiences throughout my college career. I am expected to graduate with a bachelor's degree in electrical engineering in the Spring of 2019. Currently, my future aspirations are to secure a postion in an electrical engineering or computer science related field and obtain a master's degree or PhD depending on where my interests lie in the coming years.
+    <p> Upon completing my undergraduate degree in electrical engineering, I've decided to continue my education in the Computer Science and Engineering PhD program at Michigan State University where I will be employed as a Graduate Research Assistant in the Pattern Recognition and Image Processing Laboratory lead by Dr. Anil Jain. I am ecstatic about this opportunity to pursue my interests in machine learning and computer vision with applications in biometrics.
     </p>
    	<h3>Industry Experience</h3>
    	<ul>
