--- a/index.html
+++ b/index.html
@@ -34,12 +34,8 @@
 	<div id="body">
 	<p>Welcome to my personal website. This website is intended to give a quick
     introduction of my background, interests, and projects that I have been
-    working on. I know this is a very simple website but hey, there's only
-    so many hours in a day. I'm taking a bunch of courses and have like three
-    jobs, so I can't do everything that I want - like make a super cool website.
-    But I digress.. Anyway, if you are a potential employer, feel free to browse
-    the page and reach out to me regarding any employment opportunities.
-    Thank you for visiting.
+    working on. Feel free to browse the page and reach out to me regarding
+    any employment opportunities. Thank you for visiting.
 	</p>
 	</div>
 
