--- a/interests.html
+++ b/interests.html
@@ -29,12 +29,11 @@
   	<h3>Career Interests</h3>
 	<p>The following is a list of my current fields of interests:</p>
 	<ul>
-   		<li>Artificial Intelligence</li>
    		<li>Machine Learning</li>
+      <li>Computer Vision</li>
       <li>Robotics</li>
-      <li>Embedded Systems</li>
-   		<li>Software Engineering</li>
-   		<li>Biomedical Engineering</li>
+      <li>Autonomous Systems</li>
+      <li>Biometrics</li>
   	</div>
 
   </body>
