--- a/interests.html
+++ b/interests.html
@@ -29,8 +29,7 @@
   	<h3>Career Interests</h3>
 	<p>The following is a list of my current fields of interests:</p>
 	<ul>
-   		<li>Machine Learning</li>
-      <li>Computer Vision</li>
+   		<li>Artificial Intelligence</li>
       <li>Robotics</li>
       <li>Autonomous Systems</li>
       <li>Biometrics</li>
