updated project and contact info

--- a/projects.html
+++ b/projects.html
@@ -26,31 +26,41 @@
   	</center>
 
 	<div id="projects">
-    <h3>University Honors Projects</h3>
-    <p>These are challenging projects outside of the course curriculum that helped to expand my knowledge in the related subject matter.</p>
+    <h3>Real-Time Emergency Vehicle Detection</h3>
+    Knowledge area: Deep Learning, Autonomous Vechicles
     <ul>
-   		<li>Landline Phone Use Indicator - knowledge area: Electronic Circuits</li>
-   		<li>Image Processing - knowledge area: Digital Signal Processing (DSP)</li>
-   		<li>Telephone Dialing Signal Processing - knowledge area: Signal Processing</li>
-   		<li>Matching Game - knowledge area: C</li>
+   		<li>Trained a convolutional nueral network based of the YOLO architecture for real-time emergency vehicle detection in autonomous vehicles.</li>
+   		<li>Used transfer learning to tune the YOLO CNN to detect ambulances, fire trucks, police cars, dogs, bicycles, and pedestrians.</li>
+   		<li>Validated sytsem performace in the Robotic Operating System (ROS) environment on a TurtleBot 3 Burger to demonstrate system deployability in an autonomous system.</li>
    	</ul>
-   	<h3>Personal Projects</h3>
-   	<p>The following are some of the personal projects that I have created in my free time as a way to build new skills and demonstrate my knowledge and ability to learn.</p>
-   	<ul>
-      <li>Speech Processing - knowledge area: DSP, Natural Language Processing</li>
-        &emsp;Link to github repository <a href="https://github.com/groszste/speech_processing">here</a>
-      <li>Personal Website - knowledge area: HTML, CSS</li>
-        &emsp;Link to github repository <a href="https://github.com/groszste/groszste.github.io">here</a>
-   		<li>Battleship - knowledge area: Python</li>
-        &emsp;Link to github repository <a href="https://github.com/groszste/battleShip">here</a>
-      <li>Battleship2 - knowledge area: Python</li>
-        &emsp;Link to github repository <a href="https://github.com/groszste/battleShip2">here</a>
-   		<li>Hangman - knowledge area: Python</li>
-        &emsp;Link to github repository <a href="https://github.com/groszste/hangman">here</a>
-   		<li>Text Based Adventure Game - knowledge area: Python</li>
-        &emsp;Link to github repository <a href="https://github.com/groszste/AdventureRPG">here</a>
+    <h3>Landline Phone Use Indicator</h3>
+    Knowledge area: Electronic Circuits
+    <ul>
+   		<li>Designed analog circuitry for landline use indicator.</li>
+   		<li>Design consisted of BJT tranistors, LEDs, resistors, etc.</li>
+   		<li>Circuit was capable of handling voltage and current changes resulting from alternate use modes.</li>
    	</ul>
-    </div>
+    <h3>Image Processing</h3>
+    Knowledge area: Digital Signal Processing (DSP)
+    <ul>
+   		<li>Designed filters for noise removal of images.</li>
+   		<li>Implemented various image processing techniques (Fourier and time domain filtering, image pre-processing, frequency analysis, etc.).</li>
+   	</ul>
+    <h3>Digital Signal Processing of Telephone Dialing Number Tones</h3>
+    Knowledge area: Signal Processing
+    <ul>
+   		<li>Implemented frequency and time domain filtering and analysis techniques to decode phone numbers entered by a user.</li>
+   		<li>Created digital signal processing algorithms for automatic detection of user input.</li>
+   	</ul>
+    <h3>Speech Processing</h3>
+    Knowledge area: DSP, Natural Language Processing. &emsp;Link to github repository <a href="https://github.com/groszste/speech_processing">here</a>
+    <ul>
+   		<li>Implemented Gaussian Mixture Model for speaker identification.</li>
+   		<li>Developed novel speaker identification algorithim based on signal energy between microphone users.</li>
+   		<li>Designed a system of embedded, wireless, microphone enabled device for monitoring of various conversational metrics between meeting participants.</li>
+   		<li>Enabled real-time metric analysis and data sharing between wireless embedded devices.</li>
+   	</ul>
+  </div>
 
   </body>
 </html>
