updated about page

--- a/about.html
+++ b/about.html
@@ -63,8 +63,8 @@
    	</ul>
    	<h3>Skills</h3>
    	<ul>
-   		<li>Proficient: C, C++, Python, ROS, Assembly, Matlab, PSpice (Or-Cad), EAGLE, SharePoint, Microsoft Office</li>
-   		<li>Knowledge in: Machine Learning, Deep Learning, HTML, CSS, LabVIEW, LaTex, GIT</li>
+   		<li>Proficient: C, C++, Python, ROS, Assembly, Matlab, PSpice (Or-Cad), Latex</li>
+   		<li>Knowledge in: Machine Learning, Deep Learning, HTML, CSS, LabVIEW, GIT</li>
    	</ul>
     </div>
 
