--- a/interests.html
+++ b/interests.html
@@ -30,6 +30,7 @@
 	<p>The following is a list of my current fields of interests:</p>
 	<ul>
    		<li>Artificial Intelligence</li>
+      <li>Computer Vision</li>
       <li>Robotics</li>
       <li>Autonomous Systems</li>
       <li>Biometrics</li>
