updated about page

--- a/about.html
+++ b/about.html
@@ -31,40 +31,48 @@
     <h3>Steven Grosz's Bio</h3>
     <p> Upon completing my undergraduate degree in electrical engineering, I've decided to continue my education in the Computer Science and Engineering PhD program at Michigan State University where I will be employed as a Graduate Research Assistant in the Pattern Recognition and Image Processing Laboratory lead by Dr. Anil Jain. I am ecstatic about this opportunity to pursue my interests in machine learning and computer vision with applications in biometrics.
     </p>
+    <h3>Education</h3>
+        <p style="text-align:left;"><b>Michigan State University, East Lansing, MI</b><span style="float:right;"><b>August 2019 - present</b></span><br>
+   		<i>Candidate for Ph.D. degree in Computer Science & Engineering, GPA 4.0</i></p>
+        <p style="text-align:left;"><b>Michigan State University, East Lansing, MI</b><span style="float:right;"><b>May 2019</b></span><br>
+   		<i>Bachelor of Science (Hons.), Electrical Engineering (Concentration: Biomedical Engineering), GPA 4.0</i></p>
    	<h3>Industry Experience</h3>
-   	<ul>
-   		<li>Systems Engineering Intern - <i>Aptiv, Troy, MI</i></li>
-   		<li>Electrical Engineering Intern - <i>DTE Energy, Detroit, MI</i></li>
-   	</ul>
-    <h3>Other Experience</h3>
+        Systems Engineering Intern - <i>Aptiv, Troy, MI</i>
+       	<ul>
+       		<li>Developed software to improve various engineering tools used in creating deliverables for electrical harness system integration and validation.</li>
+       		<li>Assisted in the development and validation of vehicle electrical networks.</li>
+       	</ul>
+        Electrical Engineering Intern - <i>DTE Energy, Detroit, MI</i>
+        <ul>
+       		<li>Analyzed multiple factors such as cost, reliability, load capacity, contingency loading, etc. to identify the best method of service for bringing power to various businesses throughout downtown Detroit, MI.</li>
+       		<li>Developed detailed work plans, cost estimates, engineering sketches, and contingency analysis for converting multiple customers in downtown Detroit, MI to DTE’s power line distribution.</li>
+       	</ul>
+    <h3>Research Experience</h3>
    	<ul>
    		<li>Researcher - <i>Pattern Recognition and Image Processing Lab, East Lansing, MI</i></li>
    		<li>Researcher - <i>Biomedical Ultrasonics and Electromagnetics Lab, East Lansing, MI</i></li>
    		<li>Teaching Assistant for "CE 221 Statics" - <i>Michigan State University, East Lansing, MI</i></li>
    		<li>Research Assistant - <i>Microtechnology Lab, East Lansing, MI</i></li>
    	</ul>
-   	<h3>Volunteer Work</h3>
+    <h3>Publications</h3>
+    Conference Papers
    	<ul>
-   		<li>Habitat for Humanity | Monroe, MI and Lansing, MI</li>
-   		<li>MSU Honors College Service Club | East Lansing, MI</li>
-   		<li>Girl's STEM Day | East Lansing, MI</li>
-   		<li>Usher, Hilltop Church of the Nazarene | Northville, MI</li>
-   		<li>Youth Baseball Camp Leader | Northville, MI</li>
-      <li>Servive mission trip | Louisville, KY</li>
+   		<li><b>S. A. Grosz</b>, J. J. Engelsma, N. G. Paulter and A. K. Jain, "White-Box Evaluation of Fingerprint Matchers", arXiv:1909.00799, 2019.</li>
+   		<li>Y. Gtat, S. Davila-Montero, <b>S. Grosz</b>, A. J. Mason, "Multi-sensor Badge for Social and Environmental Monitoring", IEEE International Midwest Symposium on Circuits and Systems, Dallas, TX, USA, 2019.</li>
+   		<li><b>S. Grosz</b>, R. Pereira, M. Urban, T. Humphrey, R. J. McGough, "Measured Fractional Calculus Parameters for Shear Waves in Swine Liver", IEEE International Ultrasonics Symposium, Kobe, Japan, 2018.</li>
+   	</ul>
+    Journal Papers
+    <ul>
+   		<li><b>S. Grosz</b>, R. Pereira, M. Urban, T. Humphrey, R. J. McGough, "Measured Power Law Attenuation of Shear Waves in Swine Liver", Journal of the Acoustical Society of America, 2019 (in preparation).</li>
    	</ul>
     <h3>Extracurriculars</h3>
+    CANVAS SOAR, Habitat for Humanity, Tau Beta Pi, IEEE, Intramural Sports (Basketball, Ultimate Frisbee, Softball)
+    <h3>Interests</h3>
+    Computer Vision, Artificial Intelligence, Autonomous Systems, Robotics, Volunterring, Languages (Spanish), Reading
+    <h3>Skills</h3>
    	<ul>
-   		<li>Tau Beta Pi</li>
-      <li>IEEE | Michigan State University Chapter</li>
-   		<li>Biomedical Engineering Medical Society | Michigan State University Chapter</li>
-   		<li>Habitat for Humanity | Michigan State University Chapter</li>
-   		<li>Cru, largest on campus Christian organization</li>
-   		<li>Intramural Basketball, Soccer, Softball and Ultimate Frisbee player</li>
-   	</ul>
-   	<h3>Skills</h3>
-   	<ul>
-   		<li>Proficient: C, C++, Python, ROS, Assembly, Matlab, PSpice (Or-Cad), Latex</li>
-   		<li>Knowledge in: Machine Learning, Deep Learning, HTML, CSS, LabVIEW, GIT</li>
+   		<li>Programming Languages: Python, C, C++, MATLAB; (Familiar) ROS, Assembly, HTML, CSS</li>
+   		<li>Frameworks and tools: GIT, LabView, PSpice</li>
    	</ul>
     </div>
 
