edited about page

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     </p>
     <h3>Education</h3>
         <p style="text-align:left;"><b>Michigan State University, East Lansing, MI</b><span style="float:right;"><b>August 2019 - present</b></span><br>
-   		<i>Candidate for Ph.D. degree in Computer Science & Engineering, GPA 4.0</i></p>
+   		<i>Ph.D. in Computer Science & Engineering, GPA 4.0</i></p>
         <p style="text-align:left;"><b>Michigan State University, East Lansing, MI</b><span style="float:right;"><b>May 2019</b></span><br>
    		<i>Bachelor of Science (Hons.), Electrical Engineering (Concentration: Biomedical Engineering), GPA 4.0</i></p>
    	<h3>Industry Experience</h3>
