--- a/contact.html
+++ b/contact.html
@@ -26,11 +26,12 @@
   	</center>
 
   	<div id=contact>
-  	<p><b>Mail Address</b>: 410 W Saginaw St, Apt 31, East Lansing, MI 48823</p>
-	<p><b>Email</b>: groszste@msu.edu</p>
-	<p><b>Phone:</b> (248)-504-9207</p>
-	<a href="https://www.linkedin.com/in/steven-grosz-317076107/" target="_blank">LinkedIn</a>
-	</div>
+  	<p><b>Mail Address</b>: 428 S. Shaw Ln., Room 3208</p>
+    <p>East Lansing, MI 48824</p>
+  	<p><b>Email</b>: groszste@msu.edu</p>
+  	<p><b>Phone:</b> (248)-504-9207</p>
+  	<a href="https://www.linkedin.com/in/steven-grosz-317076107/" target="_blank">LinkedIn</a>
+  	</div>
 
   </body>
 </html>
