--- a/contact.html
+++ b/contact.html
@@ -26,8 +26,7 @@
   	</center>
 
   	<div id=contact>
-  	<p><b>Mail Address</b>: 428 S. Shaw Ln., Room 3208</p>
-    <p>East Lansing, MI 48824</p>
+  	<p><b>Mail Address</b>: 428 S. Shaw Ln., Room 3208, Michigan State University Department of Computer Science and Engineering, East Lansing, MI 48824</p>
   	<p><b>Email</b>: groszste@msu.edu</p>
   	<p><b>Phone:</b> (248)-504-9207</p>
   	<a href="https://www.linkedin.com/in/steven-grosz-317076107/" target="_blank">LinkedIn</a>
