--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,12 @@
     }
     </style>
 
+  <style type="text/css">
+  <!--
+   .tab { margin-left: 40px; }
+  -->
+  </style>
+
   </head>
 
   <body a link="black" vlink="black">
@@ -27,10 +33,10 @@
 
   	<div id=contact>
   	<p><b>Mail Address</b>:</p>
-    <p>&emsp 428 S. Shaw Ln., Room 3208</p>
-    <p>&emsp Department of Computer Science and Engineering</p>
-    <p>&emsp Michigan State University</p>
-    <p>&emsp East Lansing, MI 48824</p>
+    <p class="tab">428 S. Shaw Ln., Room 3208</p>
+    <p class="tab">Department of Computer Science and Engineering</p>
+    <p class="tab">Michigan State University</p>
+    <p class="tab">East Lansing, MI 48824</p>
   	<p><b>Email</b>: groszste@msu.edu</p>
   	<p><b>Phone:</b> (248)-504-9207</p>
   	<a href="https://www.linkedin.com/in/steven-grosz-317076107/" target="_blank">LinkedIn</a>
