--- a/contact.html
+++ b/contact.html
@@ -32,11 +32,7 @@
   	</center>
 
   	<div id=contact>
-  	<p><b>Mail Address</b>:</p>
-    <p class="tab">428 S. Shaw Ln., Room 3208</p>
-    <p class="tab">Department of Computer Science and Engineering</p>
-    <p class="tab">Michigan State University</p>
-    <p class="tab">East Lansing, MI 48824</p>
+  	<p><b>Mail Address</b>: 428 S. Shaw Ln., East Lansing, MI 48824</p>
   	<p><b>Email</b>: groszste@msu.edu</p>
   	<p><b>Phone:</b> (248)-504-9207</p>
   	<a href="https://www.linkedin.com/in/steven-grosz-317076107/" target="_blank">LinkedIn</a>
