--- a/about.html
+++ b/about.html
@@ -22,20 +22,27 @@
   	<center><h1>Steven Grosz's Website</h1></center>
 
   	<center>
-  	<a href="index.html">Home</a> | <b>About</b> | <a href="interests.html">Interests</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
+  	<a href="index.html">Home</a> | <b>About (CV)</b> | <a href="interests.html">Interests</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
   	</center>
 
 	<p></p>
 
     <div id="summary">
-    <h3>Steven Grosz's Bio</h3>
-    <p> Upon completing my undergraduate degree in electrical engineering, I've decided to continue my education in the Computer Science and Engineering PhD program at Michigan State University where I will be employed as a Graduate Research Assistant in the Pattern Recognition and Image Processing Laboratory lead by Dr. Anil Jain. I am ecstatic about this opportunity to pursue my interests in machine learning and computer vision with applications in biometrics.
-    </p>
+
     <h3>Education</h3>
         <p style="text-align:left;"><b>Michigan State University, East Lansing, MI</b><span style="float:right;"><b>August 2019 - present</b></span><br>
    		<i>Ph.D. in Computer Science & Engineering, GPA 4.0</i></p>
         <p style="text-align:left;"><b>Michigan State University, East Lansing, MI</b><span style="float:right;"><b>May 2019</b></span><br>
    		<i>Bachelor of Science (Hons.), Electrical Engineering (Concentration: Biomedical Engineering), GPA 4.0</i></p>
+
+    <h3>Research Experience</h3>
+    <ul>
+      <li>Researcher - <i>Pattern Recognition and Image Processing Lab, East Lansing, MI</i></li>
+      <li>Researcher - <i>Biomedical Ultrasonics and Electromagnetics Lab, East Lansing, MI</i></li>
+      <li>Teaching Assistant for "CE 221 Statics" - <i>Michigan State University, East Lansing, MI</i></li>
+      <li>Research Assistant - <i>Microtechnology Lab, East Lansing, MI</i></li>
+    </ul>
+
    	<h3>Industry Experience</h3>
         Systems Engineering Intern - <i>Aptiv, Troy, MI</i>
        	<ul>
@@ -47,32 +54,31 @@
        		<li>Analyzed multiple factors such as cost, reliability, load capacity, contingency loading, etc. to identify the best method of service for bringing power to various businesses throughout downtown Detroit, MI.</li>
        		<li>Developed detailed work plans, cost estimates, engineering sketches, and contingency analysis for converting multiple customers in downtown Detroit, MI to DTE’s power line distribution.</li>
        	</ul>
-    <h3>Research Experience</h3>
-   	<ul>
-   		<li>Researcher - <i>Pattern Recognition and Image Processing Lab, East Lansing, MI</i></li>
-   		<li>Researcher - <i>Biomedical Ultrasonics and Electromagnetics Lab, East Lansing, MI</i></li>
-   		<li>Teaching Assistant for "CE 221 Statics" - <i>Michigan State University, East Lansing, MI</i></li>
-   		<li>Research Assistant - <i>Microtechnology Lab, East Lansing, MI</i></li>
-   	</ul>
+
     <h3>Publications</h3>
+
     Conference Papers
    	<ul>
-   		<li><b>S. A. Grosz</b>, J. J. Engelsma, N. G. Paulter and A. K. Jain, "White-Box Evaluation of Fingerprint Matchers", arXiv:1909.00799, 2019.</li>
-   		<li>Y. Gtat, S. Davila-Montero, <b>S. Grosz</b>, A. J. Mason, "Multi-sensor Badge for Social and Environmental Monitoring", IEEE International Midwest Symposium on Circuits and Systems, Dallas, TX, USA, 2019.</li>
-   		<li><b>S. Grosz</b>, R. Pereira, M. Urban, T. Humphrey, R. J. McGough, "Measured Fractional Calculus Parameters for Shear Waves in Swine Liver", IEEE International Ultrasonics Symposium, Kobe, Japan, 2018.</li>
+      <li><b>S. A. Grosz</b>, T. Chugh and A. K. Jain, "Fingerprint Presentation Attack Detection: A Sensor and Material Agnostic Approach", to appear in International Joint Conference on Biometrics (IJCB), 2020. <a href="https://arxiv.org/abs/2004.02941">[arxiv]</a></li>
+      <li><b>S. A. Grosz</b>, J. J. Engelsma, N. G. Paulter Jr. and A. K. Jain, "White-Box Evaluation of Fingerprint Matchers: Robustness to Minutiae Perturbations", to appear in International Joint Conference on Biometrics (IJCB), 2020. <a href="https://arxiv.org/abs/1909.00799">[arxiv]</a></li>
+   		<li><b>S. Grosz</b>, R. Pereira, M. Urban, T. Humphrey, R. J. McGough, "Measured Fractional Calculus Parameters for Shear Waves in Swine Liver", IEEE International Ultrasonics Symposium, Kobe, Japan, 2018. <a href="https://ieeexplore.ieee.org/abstract/document/8580193">[arxiv]</a></li>
    	</ul>
+
     Journal Papers
     <ul>
-   		<li><b>S. Grosz</b>, R. Pereira, M. Urban, T. Humphrey, R. J. McGough, "Measured Power Law Attenuation of Shear Waves in Swine Liver", Journal of the Acoustical Society of America, 2019 (in preparation).</li>
+      <li><b>S. A. Grosz</b>, J. J. Engelsma and A. K. Jain, "White-Box Evaluation of Fingerprint Recognition Systems", arXiv:2008.00128, 2020. <a href="https://arxiv.org/abs/2008.00128">[arxiv]</a></li>
    	</ul>
+
     <h3>Extracurriculars</h3>
     CANVAS SOAR, Habitat for Humanity, Tau Beta Pi, IEEE, Intramural Sports (Basketball, Ultimate Frisbee, Softball)
+
     <h3>Interests</h3>
     Computer Vision, Artificial Intelligence, Autonomous Systems, Robotics, Volunterring, Languages (Spanish), Reading
+
     <h3>Skills</h3>
    	<ul>
-   		<li>Programming Languages: Python, C, C++, MATLAB; (Familiar) ROS, Assembly, HTML, CSS</li>
-   		<li>Frameworks and tools: GIT, LabView, PSpice</li>
+   		<li>Programming Languages: Python, C, C++, MATLAB, ROS</li>
+   		<li>Frameworks and tools: Tensorflow, PyTorch, GIT, LabView, PSpice</li>
    	</ul>
     </div>
 
