--- a/index.html
+++ b/index.html
@@ -28,15 +28,17 @@
   	<center><h1>Steven Grosz's Website</h1></center>
 
   	<center>
-  	<b>Home</b> | <a href="about.html">About</a> | <a href="interests.html">Interests</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
+  	<b>Home</b> | <a href="about.html">About (CV)</a> | <a href="interests.html">Interests</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
   	</center>
 
 	<div id="body">
-	<p>Welcome to my personal website. This website is intended to give a quick
+	<!-- <p>Welcome to my personal website. This website is intended to give a quick
     introduction of my background, interests, and projects that I have been
     working on. Feel free to browse the page and reach out to me regarding
     any employment opportunities. Thank you for visiting.
-	</p>
+	</p> -->
+  <p>I am a PhD student in the Pattern Recognition and Information Processing Lab (PRIP) at Michigan State University, advised by Prof. Anil K. Jain. My main research interests are in Computer Vision, Machine Learning, and Biometrics.
+  </p>
 	</div>
 
 	<center><img class="moveimage" src="./LinkedInPic.jpg"
