--- a/interests.html
+++ b/interests.html
@@ -22,18 +22,26 @@
   	<center><h1>Steven Grosz's Website</h1></center>
 
   	<center>
-  	<a href="index.html">Home</a> | <a href="about.html">About</a> | <b>Interests</b> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
+  	<a href="index.html">Home</a> | <a href="about.html">About (CV)</a> | <b>Interests</b> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
   	</center>
 
   	<div id=interests>
   	<h3>Career Interests</h3>
 	<p>The following is a list of my current fields of interests:</p>
 	<ul>
-   		<li>Artificial Intelligence</li>
       <li>Computer Vision</li>
+      <li>Machine Learning</li>
       <li>Robotics</li>
       <li>Autonomous Systems</li>
       <li>Biometrics</li>
+    <h3>Hobbies</h3>
+  <p>The following are a few of my current hobbies:</p>
+  <ul>
+      <li>Reading</li>
+      <li>Languages</li>
+      <li>Working out</li>
+      <li>Hiking</li>
+      <li>Playing Sports</li>
   	</div>
 
   </body>
