--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
   	<center><h1>Steven Grosz's Website</h1></center>
 
   	<center>
-  	<a href="index.html">Home</a> | <a href="about.html">About (CV)</a> | <a href="interests.html">Interests</a> | <a href="projects.html">Projects</a> | <b>Contact</b>
+  	<a href="index.html">Home</a> | <a href="https://github.com/groszste/groszste.github.io/raw/master/Steven_Grosz_CV.pdf">Download CV</a> | <a href="interests.html">Interests</a> | <a href="projects.html">Projects</a> | <b>Contact</b>
   	</center>
 
   	<div id=contact>
