--- a/interests.html
+++ b/interests.html
@@ -22,7 +22,7 @@
   	<center><h1>Steven Grosz's Website</h1></center>
 
   	<center>
-  	<a href="index.html">Home</a> | <a href="about.html">About (CV)</a> | <b>Interests</b> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
+  	<a href="index.html">Home</a> | <a href="https://github.com/groszste/groszste.github.io/raw/master/Steven_Grosz_CV.pdf">Download CV</a> | <b>Interests</b> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
   	</center>
 
   	<div id=interests>
