--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   	<center><h1>Steven Grosz's Website</h1></center>
 
   	<center>
-  	<a href="index.html">Home</a> | <b>About (CV)</b> | <a href="interests.html">Interests</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
+  	<a href="index.html">Home</a> | <b>Download CV</b> | <a href="interests.html">Interests</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
   	</center>
 
 	<p></p>
