--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   	<center><h1>Steven Grosz's Website</h1></center>
 
   	<center>
-  	<b>Home</b> | <a href="CV.html">Download CV</a> | <a href="interests.html">Interests</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
+  	<b>Home</b> | <a href="CV.html">CV</a> | <a href="interests.html">Interests</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
   	</center>
 
 	<div id="body">
