--- a/CV.html
+++ b/CV.html
@@ -2,7 +2,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
+  <title>Steven's CV</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url=https://github.com/groszste/groszste.github.io/raw/master/Steven_Grosz_CV.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
