--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   	<center><h1>Steven Grosz's Website</h1></center>
 
   	<center>
-  	<b>Home</b> | <a href="CV.html">CV</a> | <a href="interests.html">Interests</a> | <a href="projects.html">Projects</a> | <a href="contact.html">Contact</a>
+  	<b>Home</b> | <a href="CV.html">CV</a> | <a href="interests.html">Interests</a> | <a href="contact.html">Contact</a>
   	</center>
 
 	<div id="body">
@@ -37,7 +37,7 @@
     working on. Feel free to browse the page and reach out to me regarding
     any employment opportunities. Thank you for visiting.
 	</p> -->
-  <p>I am a PhD student in the Pattern Recognition and Information Processing Lab (PRIP) at Michigan State University, advised by Prof. Anil K. Jain. My main research interests are in Computer Vision, Machine Learning, and Biometrics.
+  <p>Hi, I'm a PhD student in the Pattern Recognition and Information Processing Lab (PRIP) at Michigan State University, advised by Prof. Anil K. Jain. My main research interests are in Computer Vision, Machine Learning, and Biometrics.
   </p>
 	</div>
 
